# django-be

./: .gitignore  pyproject.toml
app/: middleware.py  settings.py  urls.py
firebase_auth/: authentication.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
